# smartauthen

./: README.md  setup.cfg
requirements/: requirements-dev.txt  requirements-test.txt
smartauthen/: __init__.py  auth.py
tests/: conftest.py  test_auth.py
