[metadata]
name = smartauthen
version = attr: smartauthen.__version__
author = A.A. Suvorov
author_email = smartlegiondev@gmail.com
description = Smart, simple, lightweight, secure cross-platform authentication for any application.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/smartauthen/
project_urls =
    Documentation = https://github.com/smartlegionlab/smartauthen/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/smartauthen/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    smartlegionlab
    smartauthen
    authentication
    auth
    python auth

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =

[bdist_rpm]
doc_files = docs extras LICENSE README.md

[coverage:run]
omit =
    venv/*
    .pytest_cache
    *__init__.py